--- a/erp-quimicos/src/main/webapp/vm/ctbrepbalanzacomp/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/ctbrepbalanzacomp/startup.vm
@@ -29,12 +29,14 @@
                 <td>&nbsp;&nbsp;</td>
                 <td style="background-color:#ffffff;" >
 					<div id="div_busqueda">
-						<table id="busqueda" border="0" align="left" width="1220">
+						
+						<!--
+						<table id="busqueda" border="1" align="left" width="1220">
 							<tr>
 								<td colspan="25" height="8"></td>
 							</tr>
 							<tr>
-								<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+								<td width="10">&nbsp;</td>
 								<td width="100">Tipo de Reporte</td>
 								<td width="20"></td>
 								<td width="100">Mes</td>
@@ -54,7 +56,7 @@
 							</tr>
 							
 							<tr>
-								<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+								<td width="10">&nbsp;</td>
 								<td width="100"><select name="tipo_reporte" style="width:100px;"></select></td>
 								<td width="20"></td>
 								<td width="70"><select name="select_mes" style="width:100px;"></select></td>
@@ -65,27 +67,22 @@
 								<td width="20"></td>
 								<td width="50">
 									<select name="select_cuenta" style="width:50px;"></select>
-									<!--<input type="text"name="cuenta" style="width:45px;" maxlength="4">-->
 								</td>
 								<td width="5"></td>
 								<td width="50">
 									<select name="select_subcuenta" style="width:50px;"></select>
-									<!--<input type="text"name="scuenta" style="width:45px;" maxlength="4">-->
 								</td>
 								<td width="5"></td>
 								<td>
 									<select name="select_subsubcuenta" style="width:50px;"></select>
-									<!--<input type="text"name="sscuenta" style="width:45px;" maxlength="4">-->
 								</td>
 								<td width="5"></td>
 								<td>
 									<select name="select_subsubsubcuenta" style="width:50px;"></select>
-									<!--<input type="text"name="ssscuenta" style="width:45px;" maxlength="4">-->
 								</td>
 								<td width="5"></td>
 								<td>
 									<select name="select_subsubsubsubcuenta" style="width:50px;"></select>
-									<!--<input type="text"name="sssscuenta" style="width:45px;" maxlength="4">-->
 								</td>
 								<td width="20"></td>
 								
@@ -103,7 +100,7 @@
 								<td colspan="25" height="8"></td>
 							</tr>
 							<tr id="tr_oculto">
-								<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+								<td width="10">&nbsp;</td>
 								<td width="100">Sucursal</td>
 								<td width="20"></td>
 								<td width="100"></td>
@@ -122,12 +119,8 @@
 								<td width="25"></td>
 							</tr>
 							<tr id="tr_oculto">
-								<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+								<td width="10">&nbsp;</td>
 								<td width="190" colspan="3"><select name="select_sucursal" style="width:190px;"></select></td>
-								<!--
-								<td width="20"></td>
-								<td width="70"></td>
-								-->
 								<td width="20"></td>
 								<td width="70"></td>
 								<td width="20"></td>
@@ -151,6 +144,118 @@
 								<td width="25" align="center"><a href="#" id="vermenos"><img src="../../img/farriba.png"/></a></td>
 							</tr>
 						</table>
+						-->
+						
+						<table id="busqueda" border="0" align="left" width="1220">
+							<tr>
+								<td colspan="25" height="8"></td>
+							</tr>
+							<tr>
+								<td width="10">&nbsp;</td>
+								<td width="210" colspan="5">Seleccionar&nbsp;Periodo</td>
+								<td width="20"></td>
+								<td width="90">Cuentas</td>
+								<td width="20"></td>
+								<td colspan="9">Cuenta</td>
+								<td width="20"></td>
+								<td width="280">Descripci&oacute;n</td>
+								<td width="20">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+								<td width="60"></td>
+								<td width="25"></td>
+								<td width="70"></td>
+								<td width="25"></td>
+							</tr>
+							
+							<tr>
+								<td width="10">&nbsp;</td>
+								<td width="25"><IMG SRC="../../img/catalogo/calendario.png" ALIGN="top"></td>
+								<td width="75"><INPUT TYPE="text" name="fecha_inicial" style="width:75px;" readOnly="true"></td>
+								<td width="10"></td>
+								<td width="25"><IMG SRC="../../img/catalogo/calendario.png" ALIGN="top"></td>
+								<td width="75"><INPUT TYPE="text" name="fecha_final" style="width:75px;" readOnly="true"></td>
+								<td width="20"></td>
+								<td width="90"><select name="select_cuentas" style="width:90px;"></select></td>
+								<td width="20"></td>
+								<td width="55">
+									<select name="select_cuenta" style="width:55px;"></select>
+									<!--<input type="text"name="cuenta" style="width:45px;" maxlength="4">-->
+								</td>
+								<td width="5"></td>
+								<td width="55">
+									<select name="select_subcuenta" style="width:55px;"></select>
+									<!--<input type="text"name="scuenta" style="width:45px;" maxlength="4">-->
+								</td>
+								<td width="5"></td>
+								<td width="55">
+									<select name="select_subsubcuenta" style="width:55px;"></select>
+									<!--<input type="text"name="sscuenta" style="width:45px;" maxlength="4">-->
+								</td>
+								<td width="5"></td>
+								<td width="55">
+									<select name="select_subsubsubcuenta" style="width:55px;"></select>
+									<!--<input type="text"name="ssscuenta" style="width:45px;" maxlength="4">-->
+								</td>
+								<td width="5"></td>
+								<td width="55">
+									<select name="select_subsubsubsubcuenta" style="width:55px;"></select>
+									<!--<input type="text"name="sssscuenta" style="width:45px;" maxlength="4">-->
+								</td>
+								<td width="20"></td>
+								
+								<td width="280">
+									<input type="text" name="descripcion" style="width:280px;">
+								</td>
+								<td width="20">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+								<td width="60"><input type="button"  value="Buscar" style="width:60px;"></td>
+								<td width="25"></td>
+								<td width="70"><input type="button" value="PDF" style="width:60px;"></td>
+								<td width="25" align="center"><a href="#" id="vermas"><img src="../../img/fabajo.png"/></a></td>
+							</tr>
+							
+							<tr id="tr_oculto">
+								<td colspan="25" height="8"></td>
+							</tr>
+							<tr id="tr_oculto">
+								<td width="10">&nbsp;</td>
+								<td width="210" colspan="5">Sucursal</td>
+								<td width="20"></td>
+								<td width="90"></td>
+								<td width="20"></td>
+								<td colspan="9"></td>
+								<td width="20"></td>
+								<td width="280"></td>
+								<td width="20"></td>
+								<td width="60"></td>
+								<td width="25"></td>
+								<td width="70"></td>
+								<td width="25"></td>
+							</tr>
+							<tr id="tr_oculto">
+								<td width="10">&nbsp;</td>
+								<td width="210" colspan="5"><select name="select_sucursal" style="width:215px;"></select></td>
+								<td width="20"></td>
+								<td width="90"></td>
+								<td width="20"></td>
+								<td width="50"></td>
+								<td width="5"></td>
+								<td width="50"></td>
+								<td width="5"></td>
+								<td></td>
+								<td width="5"></td>
+								<td></td>
+								<td width="5"></td>
+								<td></td>
+								<td width="20"></td>
+								<td width="280"></td>
+								<td width="20"></td>
+								<td width="60"></td>
+								<td width="25"></td>
+								<td width="70"></td>
+								<td width="25" align="center"><a href="#" id="vermenos"><img src="../../img/farriba.png"/></a></td>
+							</tr>
+						</table>
+						
+						
 					</div>
                 </td>
             </tr>
