--- a/erp-quimicos/src/main/webapp/css/components/menu/welErp.css
+++ b/erp-quimicos/src/main/webapp/css/components/menu/welErp.css
@@ -281,3 +281,53 @@
     height:15px;
 }
 
+
+
+
+
+table tr td.grid_head {
+	font-size: 11px;
+	font-weight: bold;
+	background: #fff;
+	text-align: center;
+	vertical-align: centerline;
+	background-color:#dddddd;
+	border-top:0px solid #ccc !important;
+	border-bottom:0px solid #ccc !important;
+	border-right:1px solid #ccc !important;
+	border-left:1px solid #ccc !important;
+	background-image: url("../../../img/datagrid00/bar_table.png");
+	height:18px;
+
+}
+
+table tr#tr_totales{
+	font-weight: bold;
+}
+
+table tr td.grid_datos {
+	/*font: 12px normL Tahoma,Geneva,"Helvetica Neue",Helvetica,Arial,sans-serif;*/
+	background: #FFFFFF ;
+	vertical-align: top;
+	background-color:#FFFFFF ;
+	border:1px solid #ccc !important;
+	border-right: 1px solid #ccc !important;
+}
+
+
+tfoot tr td.grid_foot {
+	font-size: 12px;
+	font-weight: bold;
+	background: #fff;
+	vertical-align: centerline;
+	background-color:#dddddd;
+	border-top:0px solid #ccc !important;
+	border-bottom:0px solid #ccc !important;
+	border-right:1px solid #ccc !important;
+	border-left:1px solid #ccc !important;
+	background-image: url("../../../img/datagrid00/bar_table.png");
+	height:18px;
+
+}
+
+
