--- a/erp-quimicos/src/main/webapp/vm/cotizaciones/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/cotizaciones/startup.vm
@@ -410,7 +410,7 @@
 																	<td class="grid" style="background-color:rgb(180,180,180);" width="80">&nbsp;Precio&nbsp;U.</td>
 																	<td class="grid" style="background-color:rgb(180,180,180);" width="50">&nbsp;Moneda</td>
 																	<td class="grid" style="background-color:rgb(180,180,180);" width="70">&nbsp;Importe</td>
-																	<td class="grid" style="background-color:rgb(180,180,180);" width="40">&nbsp;</td>
+																	<td class="grid" style="background-color:rgb(180,180,180);" width="40">Aut.</td>
 																</tr>
 															</thead>
 														</table>
@@ -543,6 +543,8 @@
 			</div>
 		</div>
 		</form>
+        
+        
         
         
         
