git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@1627 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -493,7 +493,8 @@
 													<li><a href="../logvehiculotiporodada/startup.agnux">Tipo Rodada</a></li>
 													<li><a href="../logvehiculotipocaja/startup.agnux">Tipo Caja</a></li>
 													<li><a href="../logtiporechazo/startup.agnux">Tipo de Rechazo</a></li>
-													<li><a href="../logtarifario/startup.agnux">Tarifario</a></li>
+													<li><a href="../logtarifario/startup.agnux">Tarifario por ruta</a></li>
+													<li><a href="../logtarifarioventa/startup.agnux">Tarifario de Venta</a></li>
 												</ul>
 											</li>
 											
