git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@1629 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/layouts/header.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/header.vm
@@ -1,4 +1,4 @@
-	
+	<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 	<link rel="stylesheet" href="../../css/base.css" type="text/css" >
 	<link rel="stylesheet" href="../../css/elastic.css" type="text/css" >
 	<link rel="stylesheet" href="../../css/components/menu/welErp.css" type="text/css"/>
