--- a/erp-quimicos/src/main/webapp/vm/cxcrepiepsxcliente/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/cxcrepiepsxcliente/startup.vm
@@ -6,11 +6,11 @@
         #include("${layoutheader}")
 		
         <!--  css for this catalogo -->
-        <link rel="stylesheet" href="../../css/modalbox/cxcrepiepscobrado/cxcrepiepscobrado.css" type="text/css" />
+        <link rel="stylesheet" href="../../css/modalbox/cxcrepiepsxcliente/cxcrepiepsxcliente.css" type="text/css" />
 		
         <!--  js for this catalogo -->
         <script type="text/javascript" src="../../js/components/jquery-form/jquery-form.js"></script>
-        <script type="text/javascript" src="../../js/implements/cxcrepiepscobrado/index.js" ></script>
+        <script type="text/javascript" src="../../js/implements/cxcrepiepsxcliente/index.js" ></script>
         <script type="text/javascript" src="../../js/components/formatearnumeros/agrega_comas.js"></script>
         
         #include("${layoutmenu}")
@@ -44,10 +44,13 @@
 							<td width="25"></td>
 							<td colspan="3">Fecha&nbsp;de&nbsp;Pago</td>
 							<td width="20">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-							<td></td>
-							<td width="25"></td>
-							<td width="10">&nbsp;&nbsp;&nbsp;</td>
-							<td ></td>
+							<td width="20"></td>
+							<td width="80"></td>
+							<td width="10"></td>
+							<td width="80"></td>
+							<td width="10"></td>
+							<td width="80"></td>
+							<td width="20"></td>
 						</tr>
 						
 						<tr>
@@ -59,10 +62,13 @@
 							<td width="15"></td>
 							<td width="25"><IMG SRC="../../img/catalogo/calendario.png" ALIGN="top"></td>
 							<td width="90"><INPUT TYPE="text" name="fecha_final" style="width:90px;" readOnly="true"></td>
-							<td width="20">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-							<td width="60"><INPUT TYPE="button"  value="Buscar" id="buscar" style="width:80px;"></td>
-							<td ></td>
-							<td width="95"><INPUT TYPE="button"  value="PDF" id="pdf" style="width:80px;"></td>
+							<td width="20"></td>
+							<td width="80"><INPUT TYPE="button"  value="Buscar" id="buscar" style="width:80px;"></td>
+							<td width="10"></td>
+							<td width="80"><INPUT TYPE="button"  value="PDF" id="pdf" style="width:80px;"></td>
+							<td width="10"></td>
+							<td width="80"><INPUT TYPE="button"  value="EXCEL" id="excel" style="width:80px;"></td>
+							<td width="20"></td>
 						</tr>
 					</table>
                 </td>
@@ -74,6 +80,7 @@
             <tr>
                 <td>&nbsp;&nbsp;</td>
                 <td>
+					<!--<div id="div_reporte" style="overflow:scroll; overflow-x:auto; overflow-y:auto; width:1310px; align=top; background-color:#FFFFFF; padding:0px;"></div>-->
 					<div id="div_reporte" style="overflow:scroll; overflow-x:auto; overflow-y:auto; align=top; background-color:#FFFFFF; padding:0px;"></div>
                 </td>
             </tr>
